2011-01-28  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/alpha/ev6/slot.pl: Add some missing insns.

2011-01-28 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/atom/copyd.asm: New file, grabbing another asm file.
	* mpn/x86/atom/copyi.asm: Likewise.
	* mpn/x86/atom/aors_n.asm: Likewise.
	* mpn/x86/atom/addlsh1_n.asm: Likewise.
	* mpn/x86/atom/aorsmul_1.asm: Likewise.
	* mpn/x86/atom/bdiv_q_1.asm: Likewise.
	* mpn/x86/atom/dive_1.asm: Likewise.
	* mpn/x86/atom/divrem_1.asm: Likewise.
	* mpn/x86/atom/hamdist.asm: Likewise.
	* mpn/x86/atom/logops_n.asm: Likewise.
	* mpn/x86/atom/lshift.asm: Likewise.
	* mpn/x86/atom/mod_34lsub1.asm: Likewise.
	* mpn/x86/atom/mul_1.asm: Likewise.
	* mpn/x86/atom/mul_basecase.asm: Likewise.
	* mpn/x86/atom/popcount.asm: Likewise.
	* mpn/x86/atom/rsh1add_n.asm: Likewise.
	* mpn/x86/atom/rshift.asm: Likewise.
	* mpn/x86/atom/sqr_basecase.asm: Likewise.
	
2011-01-27  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86_64/atom/rsh1aors_n.asm: New file, grabbing another asm file.
	* mpn/x86_64/atom/popcount.asm: Likewise.
	* mpn/x86_64/atom/dive_1.asm: Likewise.
	* mpn/x86_64/nano/popcount.asm: Likewise.

2011-01-26  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/alpha/invert_limb.asm: Complete rewrite.

2011-01-25  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/powerpc32/invert_limb.asm: New file.

2011-01-25 Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/x86/pentium4/sse2/bdiv_q_1.asm: New file.
	* mpn/x86/k7/bdiv_q_1.asm: New file.

2011-01-24  Torbjorn Granlund  <tege@gmplib.org>

	* tune/tuneup.c (tune_mul_n, tune_sqr): Loop, re-measuring thresholds
	until no tiny ranges remain.

2011-01-23  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/ia64/mul_2.asm: Tweak to 1.5 c/l, less overhead.

	* mpn/ia64/addmul_2.asm: Rewrite, adding mpn_addmul_2s entry point.

2011-01-22  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/ia64/aors_n.asm: Fix some incorrect bundle types.

	* mpn/ia64/sqr_diagonal.asm: Remove.
